# convertsdxl

./: .gitignore  README.md  export_onnx_sdxl.py  export_sdxl.sh  gen_quant_data_sdxl.py  htp_backend_8gen3.json  htp_backend_min.json  htp_config_8gen3.json  htp_config_min.json  prepare_data_sdxl.py  pyproject.toml  sdxl_colab_conversion.ipynb
redefined_modules/: activations.py  elementwise_ops.py
scripts/: convert_all_sdxl.sh  convert_clip2_sdxl.sh  convert_clip_sdxl.sh  convert_unet_sdxl.sh  convert_vae_decoder_sdxl.sh  convert_vae_encoder_sdxl.sh
